--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <a href="https://shenyujun.github.io/">Yujun Shen</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://zhas-group.pages.dev/author/%E6%9F%A5%E6%AD%A3%E5%86%9B/">Zheng-Jun Zha</a><sup>1</sup>,
+              <a href="https://scholar.google.com/citations?user=gDnBC1gAAAAJ&hl=zh-CN&oi=ao">Zheng-Jun Zha</a><sup>1</sup>,
             </span>
           </div>
           <br/>
