--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ We will release the code, the model, and the new dataset to facilitate the repro
   <div class="publication-links">
     <!-- PDF Link. -->
     <span class="link-block">
-      <a href="https://arxiv.org/pdf/2307.15049"
+      <a href=""
          class="external-link button is-normal is-rounded is-dark">
         <span class="icon">
             <i class="fas fa-file-pdf"></i>
