--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <a href="https://shenyujun.github.io/">Yujun Shen</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=gDnBC1gAAAAJ&hl=zh-CN&oi=ao">Zheng-Jun Zha</a><sup>1</sup>,
+              <a href="https://scholar.google.com/citations?user=gDnBC1gAAAAJ&hl=zh-CN&oi=ao">Zheng-Jun Zha</a><sup>1</sup>
             </span>
           </div>
           <br/>
@@ -215,7 +215,7 @@ We will release the code, the model, and the new dataset to facilitate the repro
   <div class="publication-links">
     <!-- PDF Link. -->
     <span class="link-block">
-      <a href=""
+      <a href="https://arxiv.org/pdf/2410.05249"
          class="external-link button is-normal is-rounded is-dark">
         <span class="icon">
             <i class="fas fa-file-pdf"></i>
@@ -225,12 +225,12 @@ We will release the code, the model, and the new dataset to facilitate the repro
     </span>
     <!-- Code Link. -->
     <span class="link-block">
-      <a href=""
+      <a href="https://github.com/wuw2019/LoT-LIP"
          class="external-link button is-normal is-rounded is-dark">
         <span class="icon">
             <i class="fab fa-github"></i>
         </span>
-        <span>Code (coming soon)</span>
+        <span>Code</span>
         </a>
     </span>
 
