--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ We will release the code, the model, and the new dataset to facilitate the repro
     </span>
     <!-- Code Link. -->
     <span class="link-block">
-      <a href="https://github.com/wuw2019/LoT-LIP"
+      <a href="https://github.com/wuw2019/LoTLIP"
          class="external-link button is-normal is-rounded is-dark">
         <span class="icon">
             <i class="fab fa-github"></i>
