--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <h1 class="title is-2 publication-title">LoTLIP: Improving Language-Image Pre-training for Long Text Understanding</h1>
           <div class="is-size-6 publication-authors">
             <span class="author-block">
-              <a href="https://wuw2019.github.io/">Wei Wu</a><sup>1</sup>,
+              <a href="https://weiwu-ww.github.io/">Wei Wu</a><sup>1</sup>,
             </span>
             <span class="author-block">
                 <a href="https://zkcys001.github.io/">Kecheng Zheng</a><sup>2,3</sup>,
