--- a/index.html
+++ b/index.html
@@ -179,10 +179,7 @@ In this work, we empirically confirm that the key reason causing such an issue i
 Towards this problem, our initial attempt is to relabel the data with <strong>long captions</strong>, however, directly learning with which may lead to performance degradation in understanding short text (<em>e.g.</em>, in the image classification task).
 Then, after incorporating corner tokens to aggregate diverse textual information, we manage to help the model catch up to its original level of short text understanding yet greatly enhance its capability of long text understanding.
 We further look into whether the model can continuously benefit from longer captions and notice a clear trade-off between the performance and the efficiency.
-Finally, we validate the effectiveness of our approach using a self-constructed large-scale dataset, which consists of <strong>100M</strong> long caption oriented text-image pairs.
-It is noteworthy that, on the task of long-text image retrieval, we beat the competitor using long captions with 11.1% improvement (<em>i.e.</em>, from 72.62% to 83.72%).
-We will release the code, the model, and the new dataset to facilitate the reproducibility and further research.
-  </p>
+Finally, we validate the effectiveness of our approach using a self-constructed large-scale dataset, which consists of <strong>100M</strong> long caption oriented text-image pairs.  </p>
 </div>
 </div>
 
