update paper link

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ Finally, we validate the effectiveness of our approach using a self-constructed 
   <div class="publication-links">
     <!-- PDF Link. -->
     <span class="link-block">
-      <a href="https://arxiv.org/pdf/2410.05249"
+      <a href="https://openreview.net/pdf?id=pc4GSBi1Hx"
          class="external-link button is-normal is-rounded is-dark">
         <span class="icon">
             <i class="fas fa-file-pdf"></i>
